@startuml

title __ENTITY's Class Diagram__\n

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.entity {
      class Achievement {
          - titleId : Integer
          - title : String
          - timeAchieved : Long
          - icon : Integer
          - unIcon : Integer
          - condition : String
          - description : String
          + Achievement()
          + getUnIcon()
          + setUnIcon()
          + getIcon()
          + setIcon()
          + getTitleId()
          + setTitleId()
          + getTimeAchieved()
          + setTimeAchieved()
          + getTitle()
          + setTitle()
          + getCondition()
          + setCondition()
          + getDescription()
          + setDescription()
      }
    }
  }
  

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.entity {
      class PositionEntity {
          + latitue : double
          + longitude : double
          + address : String
          + city : String
          + toString()
          + PositionEntity()
          + PositionEntity()
      }
    }
  }
  

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.entity {
      class RouteInfo {
          - account : String
          - startTime : String
          - endTime : String
          - length : Double
          - calorie : Integer
          - time : Long
          - keyPoints : ArrayList<LatLng>
          - centerPoints : LatLng
          - remark : String
          - isShow : Boolean
          + RouteInfo()
          + getShow()
          + setShow()
          + getRemark()
          + setRemark()
          + getTime()
          + setTime()
          + getAccount()
          + setAccount()
          + getStartTime()
          + setStartTime()
          + getEndTime()
          + setEndTime()
          + getLength()
          + setLength()
          + getCalorie()
          + setCalorie()
          + getKeyPoints()
          + setKeyPoints()
          + getCenterPoints()
          + setCenterPoints()
      }
    }
  }
  

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.entity {
      class UserInfo {
          - account : String
          - name : String
          - email : String
          - phone : String
          - password : String
          - gender : String
          - age : Integer
          - height : Integer
          - weight : Integer
          - totalLength : Double
          - totalTime : Long
          - totalCalorie : Integer
          - icon : String
          - description : String
          - number : Integer
          - title : String
          - achievement : List<Achievement>
          - location : List<Double>
          - logInTime : Long
          + UserInfo()
          + getLogInTime()
          + setLogInTime()
          + getLocation()
          + setLocation()
          + getAchievement()
          + setAchievement()
          + getTitle()
          + setTitle()
          + getNumber()
          + setNumber()
          + getDescription()
          + setDescription()
          + getIcon()
          + setIcon()
          + getAccount()
          + setAccount()
          + getName()
          + setName()
          + getEmail()
          + setEmail()
          + getPhone()
          + setPhone()
          + getPassword()
          + setPassword()
          + getGender()
          + setGender()
          + getAge()
          + setAge()
          + getHeight()
          + setHeight()
          + getWeight()
          + setWeight()
          + getTotalLength()
          + setTotalLength()
          + getTotalTime()
          + setTotalTime()
          + getTotalCalorie()
          + setTotalCalorie()
      }
    }
  }
  

  RouteInfo -up-|> BmobObject
  UserInfo -up-|> BmobObject


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
